fix: :bug: menu height on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,3 +44,8 @@ html {
     }
   }
 }
+
+.dh-screen {
+  height: 100vh;
+  height: 100dvh;
+}
